# Getting-Start-With-CUDA

./: LICENSE  README.md
01-RGB2GRAY/: README.md  compare.cpp  main.cu  rgb2gray.cpp  rgb2gray.h  timer.h
02-RGB2GRAY/: CMakeLists.txt  main.cu  reference_calc.cpp  run.sh
